# manuscript_reveiw_japanese

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  temp_スタイル付_【問題A】自動原稿整理PoC_サンプル原稿（指摘箇所コメント付）.docx
docs/: 【問題A】自動原稿整理PoC_サンプル原稿（指摘箇所コメント付）.docx
practice/: extract_choices.ipynb
src/: check.py  doc_util.py  entity.py  general_util.py  kanji.py  llm_util.py  review.py
test/: test_check.py  test_doc_util.py  test_review.py
tests/: test_check.py  test_doc_util.py  test_general_util.py  test_review.py
tests/resources/: スタイル付_【問題A】自動原稿整理PoC_サンプル原稿（指摘箇所コメント付）.docx
