[project]
name = "manuscript-review"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuya Kumagai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "fastapi",
    "python-docx",
    "python-dotenv",
    "python-multipart",
    "requests"
]


[tool.poetry]
package-mode = false

